	(top level; near elp results): Update to modern backquote.
	(tinylisp-library-documentation): Use `insert-buffer-substring'.
	(tinylisp-defmacro-surround-word): REMOVED. Obsolete.
	(tinylisp-eval): Replace call to `replace-string'
	(tinylisp-lisp-mnt-tag-check-and-fix-file): Remove `find-file-hooks'.
	(tinylisp-syntax-show-mode): Replace `make-local-hook'.

	* tiny/tinypage.el (tinypage-renumber-level-forward): Change to
	`string-to-number'.

	* tiny/tinylock.el (tinylock-:history): Change to defvar.

	* tiny/tinydiff.el
	- Update `string-to-int' to `string-to-number'.
	(tinydiff-patch-check-if-load): Fix `format' problem.
	(tinydiff-diff-command-generate): Typo `tinyef-:mode'.
	(tinydiff-diff-show): Correct `message' call.
	(tinydiff-mime-compose): Use `insert-buffer-substring'.

	* tiny/tinydebian.el (tinydebian-url-debian-browse-url): Correct `cond'
	by moving `t' case inside it.
	(tinydebian-url-policy-best-practises): Remove 2nd copy.
	(tinydebian-package-status-apt-file): Correct last `cond' case by assing `t'
	clause.
	(tinydebian-font-lock-keywords): Correct daemon.log `font-lock-keywords'.
	(tinydebian-url-list-package-debcheck): Corect call to
	`tinydebian-browse-url-1'.
	(tinydebian-package-status-dpkg-S-main): Correct call to
	`tinydebian-package-status-dpkg-s-main'.
	(tinydebian-url-page-font-lock-keywords): Move upward, before used.

	* tiny/tinylibm.el (ti::fboundp-check-autoload): Update to modern backquote.
	(ti::narrow-safe): Update to modern backquote.
	(ti::narrow-to-paragraph): Update to modern backquote.
	(ti::nconc): Update to modern backquote.
	(ti::when-package): Update to modern backquote.
	(ti::with-require): Update to modern backquote.
	(ti::with-time-this): Update to modern backquote.
	(ti::with-coding-system-raw-text): Update to modern backquote.
	(ti::verb): Update to modern backquote.
	(int-to-float): Update to modern backquote.
	(ti::dotimes): Update to modern backquote.
	(ti::funcall): Update to modern backquote.